# elicit_doc

./: Cargo.toml  README.md  justfile
src/: cli.rs  collect.rs  error.rs  gaps.rs  impl_coverage.rs  inventory.rs  lib.rs  main.rs  report.rs  shadow.rs  summary.rs  trenchcoat.rs
tests/: summary_order.rs
verif/coverage/: accesskit.csv  chrono.csv  csv.csv  gaps-impl.csv  gaps-shadow.csv  geo.csv  geo_types.csv  geojson.csv  georaster.csv  internal.csv  jiff.csv  proj.csv  redb.csv  regex.csv  reqwest.csv  rstar.csv  serde_json.csv  shadow-accesskit.csv  shadow-axum.csv  shadow-bevy.csv  shadow-chrono.csv  shadow-csv.csv  shadow-egui.csv  shadow-geo-types.csv  shadow-geo.csv  shadow-geojson.csv  shadow-georaster.csv  shadow-jiff.csv  shadow-proj.csv  shadow-ratatui.csv  shadow-redb.csv  shadow-regex.csv  shadow-reqwest.csv  shadow-rstar.csv  shadow-serde.csv  shadow-serde_json.csv  shadow-sqlx.csv  shadow-time.csv  shadow-tokio.csv  shadow-toml.csv  (+16 more)
