[package]
name = "elicit_doc"
version = "0.1.0"
edition = "2024"
description = "Coverage and drift analysis for the elicitation ecosystem"

[[bin]]
name = "elicit_doc"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "elicit_doc"
path = "src/lib.rs"

[dependencies]
rustdoc-types = "0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cargo_metadata = "0.23"
derive_more = { version = "2", features = ["display", "error", "from"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.4"

[dependencies.clap]
version = "4"
optional = true
features = ["derive", "env"]

[dependencies.indicatif]
version = "0.17"
optional = true
features = ["improved_unicode"]

[features]
default = []
cli = ["dep:clap", "dep:indicatif"]
